syntax = "proto3";

option java_package = "inventario";
option java_outer_classname = "Inventario";

package inventario;

message EstoqueRequest {
  string produto_id = 1;
  int32 quantidade_desejada = 2;
}

message EstoqueResponse {
  bool disponivel = 1;
  int32 quantidade_atual = 2;
}

message AtualizacaoRequest {
  string produto_id = 1;
  int32 quantidade = 2;
}

message AtualizacaoResponse {
  bool sucesso = 1;
  string mensagem = 2;
}

message PedidoRequest {
  string produto_id = 1;
  int32 quantidade = 2;
}

message PedidoResponse {
  bool sucesso = 1;
  string mensagem = 2;
  string deposito_responsavel = 3;
}

message CargaRequest {}
message CargaResponse {
  int32 carga_atual = 1;
}

message RelatorioTextoRequest {}
message RelatorioTextoResponse {
  string nome_arquivo = 1;
  string conteudo = 2;
}

service Warehouse {
  rpc verificarEstoque(EstoqueRequest) returns (EstoqueResponse);
  rpc atualizarEstoque(AtualizacaoRequest) returns (AtualizacaoResponse);
  rpc consultarCarga(CargaRequest) returns (CargaResponse);
  rpc exportarRelatorioTexto(RelatorioTextoRequest) returns (RelatorioTextoResponse);
}

service OrderManager {
  rpc fazerPedido(PedidoRequest) returns (PedidoResponse);
  rpc adicionarEstoque(AtualizacaoRequest) returns (AtualizacaoResponse);
  rpc removerEstoque(AtualizacaoRequest) returns (AtualizacaoResponse);
}